--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
           <div class="bottom-container">
             <a class="footer-link" href="https://www.linkedin.com/public-profile/settings?trk=d_flagship3_profile_self_view_public_profile">LinkedIn</a>
             <a class="footer-link" href="https://www.instagram.com/_._arhant_._/">Instagram</a>
-            <a class="footer-link" href="file:///Users/arhantjain/Desktop/Web%20development/HTML%20-%20personal%20site%20/index.html">Website</a>
+            <a class="footer-link" href="https://arhant-j.github.io/cv/">Website</a>
             <p class="copyright">© 2023 Arhant Jain.</p>
          </div>
           
