--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
           
           
           <div class="bottom-container">
-            <a class="footer-link" href="https://www.linkedin.com/public-profile/settings?trk=d_flagship3_profile_self_view_public_profile">LinkedIn</a>
+            <a class="footer-link" href="https://www.linkedin.com/in/arhant-jain-abbabb21b">LinkedIn</a>
             <a class="footer-link" href="https://www.instagram.com/_._arhant_._/">Instagram</a>
             <a class="footer-link" href="https://arhant-j.github.io/cv/">Website</a>
             <p class="copyright">© 2023 Arhant Jain.</p>
